new sample from github; aspectj working w/ lombok for java 8, 11, 17, 21;